@@ -11,6 +11,8 @@
 11/01/2019
    - Degraded API version to 1.0 (margaretha)
    - Added OAuth2 client info tests (margaretha)
+14/01/2019
+   - Added retrieveVCByName and deleteVCByName controllers (margaretha)
 
 # version 0.61.4
 14/11/2018
